--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
     gap: 20px;
     padding: 20px 8vw;
     padding-top: 80px;
+    margin-top: 100px;
 }
 
 .footer-content{
@@ -14,6 +15,10 @@
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     gap: 80px;
+}
+
+.footer-content-left .logo{
+        width: 150px;
 }
 
 .footer-content-left, .footer-content-right, .footer-content-center{
@@ -39,4 +44,15 @@
     height: 2px;
     margin: 20px 0;
     background-color: grey;
+}
+
+@media(max-width:750px){
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap:35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
 }
