--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,58 +1,87 @@
-.footer{
+.footer {
     color: #d9d9d9;
-    background-color: #323232;
+    background: #222;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 20px 8vw;
+    padding: 20px 100px;
     padding-top: 80px;
     margin-top: 100px;
-}
-
-.footer-content{
+  }
+  .dark .footer {
+    border-top: 2px solid #fff;
+  }
+  .footer-content-left img{
+    width: 150px;
+  }
+  
+  .footer-content {
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     gap: 80px;
-}
-
-.footer-content-left .logo{
-        width: 150px;
-}
-
-.footer-content-left, .footer-content-right, .footer-content-center{
+  }
+  .footer-content-left,
+  .footer-content-right,
+  .footer-content-center {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     gap: 20px;
-}
-.footer-content-left li, .footer-content-right li, .footer-content-center li{
+  }
+  .footer-content-right li,
+  .footer-content-center li {
     list-style: none;
-}
-.footer-content-center h2, .footer-content-right h2{
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+  .footer-content-right h2,
+  .footer-content-center h2 {
     color: white;
-}
-
-.footer-social-icons img{
+  }
+  .footer-social-icons img {
     width: 40px;
     margin-right: 15px;
-}
-
-.footer hr{
+    cursor: pointer;
+  }
+  .footer hr {
     width: 100%;
     height: 2px;
     margin: 20px 0;
     background-color: grey;
-}
-
-@media(max-width:750px){
-    .footer-content{
-        display: flex;
-        flex-direction: column;
-        gap:35px;
+    border: none;
+  }
+  .footer-social-icons img.facebook:hover {
+    filter: brightness(0) saturate(100%) invert(29%) sepia(97%) saturate(585%)
+      hue-rotate(184deg) brightness(86%) contrast(101%);
+  }
+  
+  .footer-social-icons img.twitter:hover {
+    filter: brightness(0) saturate(100%) invert(41%) sepia(91%) saturate(512%)
+      hue-rotate(182deg) brightness(90%) contrast(90%);
+  }
+  
+  .footer-social-icons img.linkedin:hover {
+    filter: brightness(0) saturate(100%) invert(21%) sepia(57%) saturate(3621%)
+      hue-rotate(170deg) brightness(88%) contrast(94%);
+  }
+  @media (max-width: 900px) {
+    .footer {
+      padding: 20px 50px;
     }
-    .footer-copyright{
-        text-align: center;
+  }
+  @media (max-width: 750px) {
+    .footer {
+      padding: 20px 30px;
     }
-}
+    .footer-content {
+      display: flex;
+      flex-direction: column;
+      gap: 35px;
+    }
+    .footer-copyright {
+      text-align: center;
+    }
+  }
+  
