--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,57 +1,54 @@
-.navbar{
-    padding: 20px 0px;
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.navbar .logo{
+    padding: 20px 100px;
+  }
+  
+  .navbar .logo {
     width: 150px;
-}
-
-.navbar-menu{
+  }
+  .navbar-menu {
     display: flex;
     list-style: none;
     gap: 20px;
     color: #49557e;
     font-size: 18px;
-
-}
-.navbar-right{
+  }
+  .dark .navbar-menu {
+    color: #7181a1;
+  }
+  .navbar-right {
     display: flex;
     align-items: center;
-    gap:40px;
-}
-.navbar button{
+    gap: 40px;
+  }
+  .navbar button {
     background: transparent;
     font-size: 16px;
-    color:#49557e;
-    border:1px solid tomato;
+    color: #49557e;
+    border: 1px solid tomato;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
-    transition: 0.3s;
-}
-
-.navbar button:hover{
-    background-color: #fff4f2;
-}
-
-.navbar .active{
+    transition: 0.2s;
+  }
+  .navbar button:hover {
+    background-color: tomato;
+    color: #fff;
+  }
+  .navbar .active {
     padding-bottom: 2px;
-    border-bottom: 2px solid #49557e;
-}
-
-.navbar li{
-    cursor: pointer;
-}
-
-.navbar-search-icon{
+    color: tomato;
+    border-bottom: 2px solid tomato;
+  }
+  .navbar a:hover {
+    color: tomato;
+  }
+  .navbar-search-icon {
     position: relative;
-
-}
-
-.navbar-search-icon .dot{
+  }
+  .navbar-search-icon .dot {
     position: absolute;
     min-width: 10px;
     min-height: 10px;
@@ -59,87 +56,109 @@
     border-radius: 5px;
     top: -8px;
     right: -8px;
-}
-
-.navbar-profile{
+  }
+  .fa-magnifying-glass,
+  .fa-bag-shopping,
+  .fa-moon,
+  .fa-sun,
+  .fa-user {
+    font-size: 30px;
+    cursor: pointer;
+    color: #49557e;
+  }
+  .dark .fa-magnifying-glass,
+  .dark .fa-bag-shopping,
+  .dark .fa-moon,
+  .dark .fa-sun,
+  .dark .fa-user {
+    color: #7181a1;
+  }
+  .navbar-profile {
     position: relative;
-}
-
-.navbar-profile-dropdown{
+    cursor: pointer;
+  }
+  .nav-profile-dropdown {
     position: absolute;
     display: none;
-    right: 0px;
+    right: 0;
     z-index: 1;
-    background-origin: 1px;
-}
-
-.navbar-profile:hover .navbar-profile-dropdown{
+  }
+  .navbar-profile:hover .nav-profile-dropdown {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 12px 25px;
     background-color: #fff2ef;
+    padding: 12px 25px;
     border-radius: 4px;
     border: 1px solid tomato;
     outline: 2px solid white;
     list-style: none;
-}
-
-.navbar-profile-dropdown li{
+  }
+  .dark .navbar-profile:hover .nav-profile-dropdown {
+    background-color: #2c2c2c;
+    border: 1px solid #7181a1;
+  }
+  .nav-profile-dropdown li {
     display: flex;
     align-items: center;
     gap: 10px;
     cursor: pointer;
-}
-
-.navbar-profile-dropdown img{
+  }
+  .nav-profile-dropdown img {
     width: 20px;
-}
-
-.navbar-profile-dropdown li:hover{
+  }
+  .nav-profile-dropdown li:hover {
     color: tomato;
-}
-
-@media (max-width:1050px){
+  }
+  
+  @media (max-width: 1050px) {
+    .navbar-menu {
+      gap: 20px;
+      font-size: 17px;
+    }
+    .navbar-right {
+      gap: 30px;
+    }
+  
+    .navbar-right button {
+      padding: 8px 25px;
+    }
+  }
+  @media (max-width: 900px) {
     .navbar .logo {
-        width: 140px;
+      width: 120px;
     }
-    .navbar-menu{
-        gap:20px;
-        font-size:17px;
+    .navbar {
+      padding: 20px 50px;
     }
-    .navbar-right{
-        gap: 30px;
+    .navbar-menu {
+      gap: 15px;
+      font-size: 15px;
     }
-    .navbar-right img{
-        width: 22px;
+    .navbar-right {
+      gap: 20px;
     }
-    .navbar-right button{
-        padding:8px 25px
+    .navbar-right button {
+      padding: 7px 20px;
+      font-size: 15px;
     }
-}
-@media (max-width:900px){
+    .fa-magnifying-glass,
+    .fa-bag-shopping,
+    .fa-moon,
+    .fa-sun,
+    .fa-user {
+      font-size: 22px;
+    }
+  }
+  @media (max-width: 750px) {
     .navbar .logo {
-        width: 120px;
+      width: 100px;
     }
-    .navbar-menu{
-        gap:15px;
-        font-size:16px;
+    .navbar {
+      padding: 20px 30px;
     }
-    .navbar-right{
-        gap: 20px;
+    .navbar-menu {
+      display: none;
     }
-    .navbar-right img{
-        width: 20px;
-    }
-    .navbar-right button{
-        padding:7px 20px;
-        font-size: 15px;
-    }
-}
-@media (max-width:750px){
-    .navbar-menu{
-        display: none;
-    }
-    
-}
+  }
+  
